# ece414_embedded_systems

Calculator/: TouchScreen.c  arrayClear.c  arrayClear.h  calculator.c  debouncer.h  fsm.h  getButtonPressed.c
Lab06/: fsmPID.c
Lab06/sch/Lab06/: Lab06.kicad_pro
Lab1/: .gitignore  blink2.c
Lab3/: .gitignore  CMakeLists.txt  debounce_sw1.h  debounce_sw2.c  debounce_sw2.h  fsm.c
Lab3/debounce_sw1/: CMakeLists.txt  led25_out.c  led25_out.h
Lab3/debounce_sw2/: CMakeLists.txt  led_out.h
Lab3/timer/: CMakeLists.txt  timer_demo.c
Lab3/uart_demo/: CMakeLists.txt
Lab4/: CMakeLists.txt  touchscreen_demo.c  ts_lcd.c  ts_lcd.h  ts_test.c
Lab5/: CMakeLists.txt  TFTMaster.c  TFTMaster.h  calculator.c  calculator.h  fsm.c  fsm.h  main.c  read_input.c  read_input.h  ts_lcd.c
lab5b/: CMakeLists.txt  calculator.c  fsm.c  main.c  read_input.c  ts_lcd.c  ts_lcd.h
lab5b 3/: CMakeLists.txt  SPIPIO.pio  TFT_PIO.c  debouncer.c  fsm.c  getButtonPressed.h  main.c  read_input.c  read_input.h  timer.c  ts_lcd.c
lab6b/: fsm.c
lab6b/sch/Lab06/: Lab06.kicad_prl  Lab06.kicad_sch
